Fixed drag and drop not working on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* * {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  user-select: none;
+} */
